[gd_scene load_steps=13 format=3 uid="uid://vqpvjtfmr8fq"]

[ext_resource type="Theme" uid="uid://covkj88ntqc5q" path="res://main_theme.tres" id="1_eoqr1"]
[ext_resource type="Script" path="res://battle/scenes/card_ui/card_ui.gd" id="2_snw5p"]
[ext_resource type="Script" path="res://battle/scenes/card_ui/card_state_machine.gd" id="3_3sm5w"]
[ext_resource type="Texture2D" uid="uid://bch54f8xnd1ul" path="res://assets/cards/card_base.png" id="3_8rrg5"]
[ext_resource type="Texture2D" uid="uid://bjy0chxcpo1gj" path="res://assets/cards/fireball_art.png" id="4_tmf4l"]
[ext_resource type="Script" path="res://battle/scenes/card_ui/card_states/card_base_state.gd" id="4_yn6xw"]
[ext_resource type="Script" path="res://battle/scenes/card_ui/card_states/card_clicked_state.gd" id="5_f71ed"]
[ext_resource type="Theme" uid="uid://dahsh05y4hbh4" path="res://card_text_theme.tres" id="5_s5sq5"]
[ext_resource type="Script" path="res://battle/scenes/card_ui/card_states/card_dragging_state.gd" id="6_f3rbr"]
[ext_resource type="Script" path="res://battle/scenes/card_ui/card_states/card_released_state.gd" id="7_kio77"]
[ext_resource type="Script" path="res://battle/scenes/card_ui/card_states/card_aiming_state.gd" id="8_iebqh"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bgdvr"]
size = Vector2(64, 96)

[node name="CardUI" type="Control"]
custom_minimum_size = Vector2(64, 96)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -576.0
offset_bottom = -384.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_eoqr1")
script = ExtResource("2_snw5p")

[node name="CardBase" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("3_8rrg5")
stretch_mode = 5

[node name="CardArt" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("4_tmf4l")
expand_mode = 1
stretch_mode = 5

[node name="Cost" type="Label" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -16.0
offset_bottom = 16.0
grow_horizontal = 0
text = "2"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CardText" type="RichTextLabel" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -28.0
offset_top = -31.0
offset_right = 27.0
offset_bottom = -4.0
grow_horizontal = 2
grow_vertical = 0
mouse_filter = 2
theme = ExtResource("5_s5sq5")
bbcode_enabled = true
text = "Example Card"
scroll_active = false

[node name="DropPointDetector" type="Area2D" parent="."]
collision_mask = 2
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="DropPointDetector"]
position = Vector2(32, 48)
shape = SubResource("RectangleShape2D_bgdvr")

[node name="CardStateMachine" type="Node" parent="." node_paths=PackedStringArray("initial_state")]
script = ExtResource("3_3sm5w")
initial_state = NodePath("CardBaseState")

[node name="CardBaseState" type="Node" parent="CardStateMachine"]
script = ExtResource("4_yn6xw")

[node name="CardClickedState" type="Node" parent="CardStateMachine"]
script = ExtResource("5_f71ed")
state = 1

[node name="CardDraggingState" type="Node" parent="CardStateMachine"]
script = ExtResource("6_f3rbr")
state = 2

[node name="CardReleasedState" type="Node" parent="CardStateMachine"]
script = ExtResource("7_kio77")
state = 4

[node name="CardAimingState" type="Node" parent="CardStateMachine"]
script = ExtResource("8_iebqh")
state = 3

[node name="Color" type="ColorRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.52414, 0.73, 0.4672, 1)

[node name="State" type="Label" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "state"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="area_entered" from="DropPointDetector" to="." method="_on_drop_point_detector_area_entered"]
[connection signal="area_exited" from="DropPointDetector" to="." method="_on_drop_point_detector_area_exited"]
